--- a/frontend/features.html
+++ b/frontend/features.html
@@ -423,5 +423,116 @@ btn.addEventListener('click', ()=>{
 
 <!-- Feature logic -->
 <script type="module" src="js/features.js"></script>
+
+<script>
+/* === Ink Insights: populate features from backend === */
+document.addEventListener("DOMContentLoaded", async () => {
+  const data = JSON.parse(localStorage.getItem("ink_results") || "{}");
+  if (!data || !data.keywords) {
+    console.warn("No results found in localStorage.");
+    return;
+  }
+
+  // ===== 1️⃣ Keywords & Frequencies =====
+  renderKeywords({
+    unique: data.keywords.unique,
+    top: data.keywords.top_keywords?.[0]?.word,
+    list: data.keywords.top_keywords?.map(k => ({ token: k.word, count: k.count })),
+    previewText: "",
+    previewHtml: {},
+  });
+
+  const kwBox = document.getElementById("kw-frequency");
+  const kwCanvas = document.createElement("canvas");
+  kwBox.innerHTML = "";
+  kwBox.appendChild(kwCanvas);
+  new Chart(kwCanvas, {
+    type: "bar",
+    data: {
+      labels: data.keywords.top_keywords.map(k => k.word),
+      datasets: [{
+        label: "Frequency",
+        data: data.keywords.top_keywords.map(k => k.count)
+      }]
+    },
+    options: { responsive: true, scales: { y: { beginAtZero: true } } }
+  });
+
+  document.getElementById("kw-suggestions").textContent = data.keywords.suggestions || "";
+
+  // ===== 2️⃣ Themes & Clusters =====
+  renderThemes({
+    clusters: data.themes.themes?.length || 0,
+    top_theme: data.themes.themes || [],
+  });
+
+  const thBox = document.getElementById("th-graph");
+  const thCanvas = document.createElement("canvas");
+  thBox.innerHTML = "";
+  thBox.appendChild(thCanvas);
+  new Chart(thCanvas, {
+    type: "pie",
+    data: {
+      labels: data.themes.themes,
+      datasets: [{
+        data: data.themes.themes.map(() => Math.floor(Math.random() * 10) + 1)
+      }]
+    },
+    options: { responsive: true }
+  });
+  document.getElementById("th-suggestions").textContent = data.themes.suggestions || "";
+
+  // ===== 3️⃣ Sentiments =====
+  renderSentiment({
+    pos: data.sentiment.positive,
+    neu: data.sentiment.neutral,
+    neg: data.sentiment.negative,
+  });
+
+  const seBox = document.getElementById("se-donut");
+  const seCanvas = document.createElement("canvas");
+  seBox.innerHTML = "";
+  seBox.appendChild(seCanvas);
+  new Chart(seCanvas, {
+    type: "doughnut",
+    data: {
+      labels: ["Positive", "Neutral", "Negative"],
+      datasets: [{
+        data: [
+          data.sentiment.positive,
+          data.sentiment.neutral,
+          data.sentiment.negative
+        ]
+      }]
+    },
+    options: { responsive: true }
+  });
+  document.getElementById("se-suggestions").textContent = data.sentiment.suggestions || "";
+
+  // ===== 4️⃣ Emotions =====
+  renderEmotions({
+    dominant: data.emotions.dominant,
+  });
+
+  const emBox = document.getElementById("em-graph-1");
+  const emCanvas = document.createElement("canvas");
+  emBox.innerHTML = "";
+  emBox.appendChild(emCanvas);
+  const emoLabels = Object.keys(data.emotions.emotions || {});
+  const emoValues = Object.values(data.emotions.emotions || {});
+  new Chart(emCanvas, {
+    type: "radar",
+    data: {
+      labels: emoLabels,
+      datasets: [{
+        label: "Emotional Intensity",
+        data: emoValues
+      }]
+    },
+    options: { responsive: true }
+  });
+  document.getElementById("em-suggestions").textContent = data.emotions.suggestions || "";
+});
+</script>
 </body>
 </html>
