--- a/frontend/loading.html
+++ b/frontend/loading.html
@@ -205,7 +205,7 @@
   }
 
   try {
-    const res = await fetch("https://ink-insights-backend.vercel.app/", {
+    const res = await fetch("https://ink-insights-backend.vercel.app/api/upload", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ text, filename: meta.name || "uploaded.txt" })
